@@ -1,3 +1,11 @@
+2011-10-20  Chong Yidong  <cyd@gnu.org>
+
+	* erc.el (define-erc-module): Fix autogenerated docstring to
+	reflect Emacs 24 minor mode changes.
+
+	* erc-fill.el (erc-fill-mode):
+	* erc-track.el (erc-track-minor-mode): Doc fix.
+
 2011-09-23  Antoine Levitt  <antoine.levitt@gmail.com>
 
 	* erc-button.el (erc-button-next-function): Scoping fix
